Updating index copy

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div>
             <header>
-                <h1>Main Branch File</h1>
+                <h1>This Is The File</h1>
                 
             </header>
         </div>
